Connected multiple users to a room

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,7 +1,9 @@
 .center {
-  height: 100vh;
+  height: calc(100vh - 100px);
   display: flex;
+  justify-content: center;
   align-items: center;
+  overflow-y: hidden;
 }
 
 .cardContainer {
