--- a/client/src/PokerPage.module.css
+++ b/client/src/PokerPage.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100vh - 80px);
 }
 
 .cards {
