--- a/client/src/components/PlayingCard/PlayingCard.module.css
+++ b/client/src/components/PlayingCard/PlayingCard.module.css
@@ -1,6 +1,7 @@
 .imageContainer {
   position: relative;
   display: inline-block;
+  margin-bottom: 50px;
 }
 
 .centeredImage {
@@ -14,7 +15,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 18px;
+  font-size: 24px;
   font-weight: bold;
   color: white;
   background-color: transparent;
