--- a/client/src/components/PlayersList/PlayersList.module.css
+++ b/client/src/components/PlayersList/PlayersList.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-right: 10px; */
+  margin-bottom: 50px;
 }
 
 .containerList {
