--- a/client/src/components/HeaderBar/HeaderBar.module.css
+++ b/client/src/components/HeaderBar/HeaderBar.module.css
@@ -1,8 +1,8 @@
 .neonLetter {
   color: white; /* Neon green color */
-  text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00,
-    0 0 40px #00ff00, 0 0 50px #00ff00, 0 0 60px #00ff00, 0 0 70px #00ff00;
-  animation: neonAnimation 40.1s linear infinite;
+  text-shadow: 0 0 10px #b0b7b0, 0 0 20px #b7beb7, 0 0 30px #c7cfc7,
+    0 0 40px #bfc5bf, 0 0 50px #bcc2bc, 0 0 60px #d6dad6, 0 0 70px #dbe0db;
+  animation: neonAnimation infinite linear infinite;
 }
 
 @keyframes neonAnimation {
