--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,19 +32,20 @@
     linear-gradient(90deg, #404040 1px, transparent 1px);
   background-position: 0 0, 0 0;
   background-size: 40px 40px;
+  background-repeat: repeat;
   z-index: -1;
 }
 
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  height: 100%;
+  height: calc(100vh + 500px);
   width: 100%;
 }
 
 body {
   font-weight: 300;
   line-height: 1.6;
-  height: 100%;
+  height: calc(100vh + 500px);
   width: 100%;
 }
