--- a/client/src/components/PlayingCard/PlayingCard.module.css
+++ b/client/src/components/PlayingCard/PlayingCard.module.css
@@ -22,3 +22,16 @@
   mix-blend-mode: screen;
   z-index: 5;
 }
+.centeredLetterReady {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  background-color: transparent;
+  pointer-events: none;
+  mix-blend-mode: screen;
+  z-index: 5;
+}
